<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PenaltiesActivity">

    <TextView
        android:id="@+id/textViewTeamOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Team One"
        android:textSize="24sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewTeamOneScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="36sp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonTeamOneGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gol" />

        <Button
            android:id="@+id/buttonTeamOneMiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gol Perdido" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewTeamTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Team Two"
        android:textSize="24sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textViewTeamTwoScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="36sp"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/buttonTeamTwoGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gol" />

        <Button
            android:id="@+id/buttonTeamTwoMiss"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gol Perdido" />

    </LinearLayout>

</LinearLayout>
